--- a/CORE.css
+++ b/CORE.css
@@ -56,6 +56,7 @@
 	--neutral-800: #515151;
 	--neutral-900: #282828;
 
+	--x-small: 4px;
 	--small: 8px;
 	--medium: 16px;
 	--large: 24px;
@@ -129,7 +130,7 @@ h6 {
 
 button {
 	display: inline-flex;
-	padding: var(--medium) var(--x-large);
+	padding: var(--small) var(--medium);
 	justify-content: center;
 	align-items: center;
 	gap: var(--small);
@@ -137,7 +138,7 @@ button {
 	background-color: var(--primary-500);
 	color: var(--white);
 
-	border-radius: none;
+	border-radius: var(--radius-s);
 	border: none;
 
 	cursor: pointer;
@@ -172,6 +173,8 @@ p,
 	font-style: normal;
 	font-weight: 400;
 	line-height: 150%; /* 27px */
+
+	max-width: 76ch;
 }
 
 a,
@@ -200,7 +203,7 @@ label,
 
 button,
 .button-text {
-	font-size: 18px;
+	font-size: 16px;
 	font-style: normal;
 	font-weight: 600;
 	line-height: 130%; /* 23.4px */
@@ -209,7 +212,7 @@ button,
 .notification {
 	display: flex;
 	flex-direction: row;
-	gap: var(--large);
+	gap: var(--small);
 
 	padding: var(--medium);
 
@@ -222,8 +225,8 @@ button,
 }
 
 .notification.info {
-	background-color: var(--neutral-200);
-	border-color: var(--neutral-900);
+	background-color: var(--primary-300);
+	border-color: var(--primary-500);
 }
 
 .notification.success {
