switch to Tailwind-based styling

--- a/CORE.css
+++ b/CORE.css
@@ -1,158 +1,7 @@
+/* DEPRECATED */
+/* TODO: port all classes to tailwind */
+
 /* https://www.figma.com/community/file/817513323632105907/core-lite-v3-3-0-design-system-starter-kit */
-
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
-
-:root {
-	--white: #f8f8f8;
-	--black: #111111;
-
-	--primary-100: #ebecff;
-	--primary-200: #d3d5fe;
-	--primary-300: #a7acfd;
-	--primary-400: #7b82fc;
-	--primary-500: #4f59fb;
-	--primary-600: #333cde;
-	--primary-700: #262da7;
-	--primary-800: #191e6f;
-	--primary-900: #0d0f38;
-
-	--red-100: #ffe7e7;
-	--red-200: #ffc9c9;
-	--red-300: #ff9494;
-	--red-400: #ff5e5e;
-	--red-500: #ff2828;
-	--red-600: #e20c0c;
-	--red-700: #aa0909;
-	--red-800: #710606;
-	--red-900: #390303;
-
-	--green-100: #e8f4e6;
-	--green-200: #cce7c7;
-	--green-300: #99d090;
-	--green-400: #66b858;
-	--green-500: #34a120;
-	--green-600: #178404;
-	--green-700: #116303;
-	--green-800: #0c4202;
-	--green-900: #062101;
-
-	--yellow-100: #fef4e8;
-	--yellow-200: #fde6cb;
-	--yellow-300: #facd97;
-	--yellow-400: #f8b462;
-	--yellow-500: #f59c2e;
-	--yellow-600: #d97f12;
-	--yellow-700: #a35f0d;
-	--yellow-800: #a35f0d;
-	--yellow-900: #362004;
-
-	--neutral-100: #f8f8f8;
-	--neutral-200: #efefef;
-	--neutral-300: #dfdfdf;
-	--neutral-400: #cecece;
-	--neutral-500: #bebebe;
-	--neutral-600: #a2a2a2;
-	--neutral-700: #797979;
-	--neutral-800: #515151;
-	--neutral-900: #282828;
-
-	--x-small: 4px;
-	--small: 8px;
-	--medium: 16px;
-	--large: 24px;
-	--x-large: 32px;
-
-	--radius-s: 7px;
-	--radius-m: 10px;
-	--radius-l: 15px;
-}
-
-* {
-	font-family: "Inter", sans-serif;
-	color: var(--white);
-	box-sizing: border-box;
-}
-
-body {
-	background-color: var(--primary-900);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	all: unset;
-}
-
-h1 {
-	font-size: 55px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 71.5px */
-}
-
-h2 {
-	font-size: 44px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 57.2px */
-}
-
-h3 {
-	font-size: 35px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 45.5px */
-}
-
-h4 {
-	font-size: 28px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 140%; /* 39.2px */
-}
-
-h5 {
-	font-size: 23px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 29.9px */
-}
-
-h6 {
-	font-size: 20px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 26px */
-}
-
-button {
-	display: inline-flex;
-	padding: var(--small) var(--medium);
-	justify-content: center;
-	align-items: center;
-	gap: var(--small);
-
-	background-color: var(--primary-500);
-	color: var(--white);
-
-	border-radius: var(--radius-s);
-	border: none;
-
-	cursor: pointer;
-
-	transition: background-color 250ms ease;
-}
-
-button:hover {
-	background-color: var(--primary-700);
-}
-
-button:focus {
-	background-color: var(--primary-800) !important;
-}
 
 button.danger {
 	background-color: var(--red-500) !important;
@@ -166,187 +15,10 @@ button.danger:focus {
 	background-color: var(--red-800) !important;
 }
 
-button:disabled {
-	color: var(--neutral-700) !important;
-	background-color: var(--neutral-400) !important;
-	cursor: not-allowed !important;
-}
-
 button:disabled * {
 	color: var(--neutral-700) !important;
 	fill: var(--neutral-700) !important;
 	stroke: var(--neutral-700) !important;
-}
-
-input,
-select {
-	width: 355px !important;
-	padding: var(--small);
-
-	font-size: 18px;
-	font-weight: 400;
-
-	color: var(--neutral-900);
-	background-color: var(--white);
-
-	border: 2px solid var(--neutral-900);
-	border-radius: var(--radius-s);
-
-	transition: border-color 250ms ease;
-}
-
-input[type="checkbox"] {
-	position: absolute;
-	opacity: 0;
-	height: 0 !important;
-	width: 0 !important;
-}
-
-.checkmark {
-	position: relative;
-	height: 25px;
-	width: 25px;
-	margin-right: var(--small);
-
-	border: 2px solid var(--neutral-900);
-	border-radius: var(--radius-s);
-
-	background-color: var(--white);
-
-	transition: background-color 250ms ease;
-}
-
-.checkmark:after {
-	content: "";
-	position: absolute;
-	display: none;
-
-	left: 7px;
-	top: 3px;
-	width: 5px;
-	height: 10px;
-	border: solid white;
-	border-width: 0 2px 2px 0;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-
-label:hover input ~ .checkmark {
-	background-color: var(--primary-200);
-}
-
-label:focus input ~ .checkmark,
-label:active input ~ .checkmark {
-	border-color: var(--primary-500);
-}
-
-label input:checked ~ .checkmark {
-	background-color: var(--primary-500);
-}
-
-label input:checked ~ .checkmark:after {
-	display: block;
-}
-
-option:checked {
-	font-weight: bold;
-}
-
-option:disabled {
-	color: var(--neutral-700) !important;
-	background-color: var(--neutral-400) !important;
-	cursor: not-allowed !important;
-}
-
-input:hover,
-select:hover {
-	border-color: var(--neutral-800);
-}
-
-input:focus,
-select:focus,
-input:active,
-select:active {
-	border-color: var(--primary-500);
-}
-
-.headline {
-	font-size: 44px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 130%; /* 57.2px */
-}
-
-span,
-p,
-.body-text {
-	font-size: 18px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: 150%; /* 27px */
-
-	max-width: 76ch;
-}
-
-a,
-.textlink {
-	font-size: 18px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 150%; /* 27px */
-	text-decoration-line: underline;
-
-	color: var(--primary-500);
-}
-
-label,
-.form-label {
-	font-size: 18px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 150%; /* 27px */
-	color: var(--neutral-900);
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.form-hint {
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: 150%; /* 24px */
-}
-
-button,
-.button-text {
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 600;
-	line-height: 130%; /* 23.4px */
-}
-
-.notification {
-	display: flex;
-	flex-direction: row;
-	gap: var(--small);
-
-	padding: var(--medium);
-
-	border: 2px solid var(--black);
-	border-radius: var(--radius-s);
-}
-
-.notification * {
-	color: var(--neutral-900) !important;
-}
-
-.notification.info {
-	background-color: var(--primary-300);
-	border-color: var(--primary-500);
 }
 
 .notification.success {
@@ -367,10 +39,4 @@ button,
 .notification .icon {
 	width: 32px;
 	height: 32px;
-}
-
-.notification .content {
-	display: flex;
-	flex-direction: column;
-	gap: var(--small);
 }
